# rustblood-selfbot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
quirks/: ARADIA.json  ERIDAN.json  EXAMPLE.json  FEFERI.json  GAMZEE.json  GHOSTARADIA.json  HIC.json  KANAYA.json  KARKAT.json  NEPETA.json  SOLLUX.json  TAVROS.json  TEREZI.json  TEST.json  VRISKA.json
src/: main.rs  quirk.rs  tests.rs
