[package]
name = "rustblood"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/hecksadecimal/discord-rs", default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
unicode-segmentation = "1.9.0"
regex = "1.6"
relative-path = { version = "1.7.2", features = ["serde"] }
self_update = "0.30"

[features]
static_ssl = ['openssl/vendored']

[dependencies.openssl]
version = "0.10.41"
features = ["vendored"]

[dev-dependencies]
test-case = "2.2.1"